--- a/profil/index.html
+++ b/profil/index.html
@@ -114,9 +114,9 @@ const brak = document.getElementById("brak");
 const statusEl = document.getElementById("status");
 
 const statusMap = {
-  "✅": { text: "Zweryfikowany w OREP", class: "status-ok" },
-  "⌛": { text: "W trakcie weryfikacji", class: "status-wait" },
-  "❌": { text: "Niezweryfikowany", class: "status-no" }
+  "✅": { text: "Status ELEKTRYKA - zweryfikowany", class: "status-ok" },
+  "⌛": { text: "Status ELEKTRYKA - w trakcie weryfikacji", class: "status-wait" },
+  "❌": { text: "Status ELEKTRYKA - aktualnie brak weryfikacji", class: "status-no" }
 };
 
 search.addEventListener("input", async () => {
