--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -222,7 +222,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 
   let query = supabase
     .from("tabela_elektrykow")
-    .select("imie,nazwisko,email,telefon,gwiazdki,status")
+    .select("id,imie,nazwisko,email,telefon,gwiazdki,status")
     .eq("wojewodztwo", woj.value)
 
   if(miasto.value){
@@ -248,20 +248,24 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
     d.innerHTML = `
       <div class="lp">${i+1}</div>
       <div class="person">
-        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}
-</div>
+        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}</div>
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
       </div>
-      
+      <div class="small">Status: ${e.status}</div>
+      <div>
+        <button onclick="window.location.href='/profil.html?id=${e.id}'">
+          Zobacz profil
+        </button>
       </div>
-      <div class="small">Status elektryka / weryfikacja   ${e.status}</div>
     `
     results.appendChild(d)
   })
 })
 </script>
+
 <p id="p1"class="przypis"></br>
   <sup>*</sup><b>Opis dotyczący gwiazdek oraz posiadanego statusu:</b></br><br>⭐ elektryk posiada uprawnienia Eksploatacja.</br><br> ⭐⭐ elektryk posiada uprawnienia Eksploatacja wraz z prawem. wykonywania pomiarów ochronnych.</br><br>⭐⭐⭐ elektryk posiada wszystkie możliwe uprawnienia z prawem do prowadzenia Dozoru instalacji i sieci energetycznych.</br><br> ✅ Elektryk udostepnił uprawnienia i został pozytywnie zweryfikowany.</br><br> ⌛ Elektryk udostepnił uprawnienia i oczekuję na weryfikację.</br><br>❌ Elektryk <b>NIE</b> udostepnił uprawnień do weryfikacji lub <b>NIE</b> zostały wydanę przez komisję do tego uprawnione zgodnie z URE .</br><p>
+
 </body>
 </html>
