--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -254,7 +254,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       </div>
       <div class="small">Status: ${e.status}</div>
       <div>
-        <button onclick="window.location.href='/profil.html?id=${e.id}'">
+        <button onclick="window.location.href='profil.html?id=${e.id}'">
           Zobacz profil
         </button>
       </div>
